# breakout

./: CMakeLists.txt  README.md
assets/: CMakeLists.txt
assets/config/: video.cfg
assets/shaders/: sprite.fs
include/: app.h  game.h  game_object.h  game_stage.h  image.h  resource.h  shader.h  sprite.h  texture.h  timer.h
src/: CMakeLists.txt  app.cpp  game.cpp  game_object.cpp  game_stage.cpp  image.cpp  main.cpp  resource.cpp  shader.cpp  sprite.cpp  texture.cpp  timer.cpp
